...
        android:textStyle="bold"
        android:maxLines="3"
        android:lineSpacingExtra="4dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:visibility="gone" />

    <!-- Buffering Spinner (centered) -->
    <ProgressBar
        android:id="@+id/buffering_spinner"
        style="?android:attr/progressBarStyle"
...
